# najah-app

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
announcement/: models.py  urls.py  views.py
authentication/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_delete_customuser.py
booking/: admin.py  apps.py  enums.py  models.py  receivers.py  serializers.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_class_rate_per_hour.py  0003_alter_class_students_alter_class_tutor.py  0004_class_description.py  0005_alter_class_students.py  0006_class_student_capacity.py  0007_booking_status_alter_class_duration_and_more.py  0008_alter_booking_payment.py  0009_class_start_date_class_status.py  0010_academyclass_alter_booking_booking_class_and_more.py  0011_academyclass_uuid.py  0012_alter_booking_status.py  0013_alter_booking_payment.py
booking/tests/: factories.py  test_api.py  test_models.py  test_receivers.py
education/: admin.py  models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_subject_description.py  0003_alter_educationlevel_is_higher_education.py
education/tests/: factories.py  (+1 more)
najah/: asgi.py  settings.py  urls.py  webhooks.py  wsgi.py
nginx/: nginx.conf
payment/: enums.py  models.py  serializers.py
persons/: enums.py  models.py  serializers.py
private/: admin.py  models.py  serializers.py  urls.py  views.py
profile/: admin.py  models.py  serializers.py  urls.py  views.py
tests/: test_najah.py
(+26 files in other folders)
